syntax = "proto3";

message messageName{
  string camelCase = 1;
}
